feat: Adding sections to webpage

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -4,8 +4,8 @@
 <header class="flex flex-row justify-between py-8">
     <h1 class="text-white text-3xl font-bold">FullRenew</h1>
     <nav class=" text-white/80 flex flex-row gap-4 hover:*:text-white">
-        <a href="/">Home</a>
-        <a href="/about">About</a>
-        <a href="/blog">Blog</a>
+        <a href="/">Inicio</a>
+        <a href="#aboutUs">Sobre Nosotros</a>
+        <a href="#contactUs">Contactanos</a>
     </nav>
 </header>
