--- a/src/sections/Hero.astro
+++ b/src/sections/Hero.astro
@@ -1,7 +1,7 @@
 ---
 
 ---
-<section class="mt-16 flex flex-col gap-12">
+<section class="flex flex-col gap-12">
     <h1 class="text-6xl font-medium text-white leading-snug">
         Impulsa tu negocio con iPhones reacondicionados de calidad: stock amplio, entregas rápidas y garantía confiable.
     </h1>
