--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,7 @@
 ---
 // Supports weights 100-900
 import '@fontsource-variable/inter';
+
 interface Props {
 	title: string;
 }
@@ -18,8 +19,8 @@ const { title } = Astro.props;
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
 	</head>
-	<body class="bg-neutral-900 grid place-items-center w-screen min-h-screen">
-		<div class="h-full w-4/6">
+	<body class="bg-neutral-900 grid place-items-center max-w-screen min-h-screen pb-16">
+		<div class="h-full max-w-[1442px] mx-10">
 			<slot />
 		</div>
 	</body>
