feat:Adding contact section

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -5,9 +5,9 @@
     <h4 class="text-white font-semibold font-xl">SUSCRIBETE A NUESTRA NEWSLETTER</h4>
     <p class="text-neutral-300 w-1/2 text-center">Suscríbete a nuestro boletín para recibir noticias, actualizaciones gratuitas de contenido interesante y nuevos productos lanzados</p>
     <form action="">
-        <span class="border overflow-hidden border-neutral-300 rounded-lg">
-            <input class="bg-transparent text-white outline-none px-2 text-xl" type="text" placeholder="Introduce tu email aqui">
-            <button class="bg-white text-neutral-900">Send</button>
+        <span class="relative border border-neutral-300 rounded-lg p-2">
+            <input class="bg-transparent text-white outline-none px-2 text-xl h-full" type="text" placeholder="Introduce tu email aqui">
+            <button class="absolute top-0 right-0 bg-white text-neutral-900 px-1 h-full">Send</button>
         </span>
     </form>
 </footer>
