--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,6 +7,7 @@ import OurMission from '@/sections/OurMission.astro';
 import Footer from '@/components/Footer.astro';
 import CardsInfo from '@/sections/CardsInfo.astro';
 import AboutUs from '@/sections/AboutUs.astro';
+import ContactUs from '@/sections/ContactUs.astro';
 ---
 
 <Layout title="FullRenew">
@@ -17,6 +18,7 @@ import AboutUs from '@/sections/AboutUs.astro';
 		<OurMission></OurMission>
 		<CardsInfo></CardsInfo>
 		<AboutUs></AboutUs>
+		<ContactUs></ContactUs>
 		<Footer></Footer>
 	</main>
 </Layout>
