feat: Structure de home page and adding battery change section

--- a/src/sections/CardsInfo.astro
+++ b/src/sections/CardsInfo.astro
@@ -17,7 +17,7 @@ const info = [
     }
 ]
 ---
-<section class="flex flex-row w-full justify-center">
+<section class="flex flex-row w-full justify-center py-12">
     <div class="grid grid-cols-3 w-3/4 gap-12">
         {
             info.map((item) => {
