--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,13 +1,20 @@
 ---
+import Email from "@/icons/Email.astro";
+
 
 ---
-<footer class="mt-auto flex flex-col items-center justify-center gap-4">
+<footer class="mt-12 flex flex-col items-center justify-center gap-6">
     <h4 class="text-white font-semibold font-xl">SUSCRIBETE A NUESTRA NEWSLETTER</h4>
     <p class="text-neutral-300 w-1/2 text-center">Suscríbete a nuestro boletín para recibir noticias, actualizaciones gratuitas de contenido interesante y nuevos productos lanzados</p>
     <form action="">
-        <span class="relative border border-neutral-300 rounded-lg p-2">
-            <input class="bg-transparent text-white outline-none px-2 text-xl h-full" type="text" placeholder="Introduce tu email aqui">
-            <button class="absolute top-0 right-0 bg-white text-neutral-900 px-1 h-full">Send</button>
+        <span class="flex flex-row justify-center items-center">
+            <div class="relative w-full">
+                <Email class="absolute inset-[13px] w-5 h-5 text-neutral-300 -z-10"></Email>
+                <input class="block p-3 pl-10 w-full text-sm text-white bg-transparent rounded-l-lg outline-none border border-gray-300" placeholder="Introduce aqui tu email" type="email" id="email">
+            </div>
+            <div>
+                <button type="submit" class="py-3 px-5 w-full text-sm font-medium text-center bg-neutral-300 text-neutral-900 rounded-r-lg border cursor-pointer bg-primary-700 border-primary-600 hover:bg-white transition-all">Subscribir</button>
+            </div>
         </span>
     </form>
 </footer>
