--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,6 +8,9 @@ import Footer from '@/components/Footer.astro';
 import CardsInfo from '@/sections/CardsInfo.astro';
 import AboutUs from '@/sections/AboutUs.astro';
 import ContactUs from '@/sections/ContactUs.astro';
+import BatteryChange from '@/sections/BatteryChange.astro';
+import UsedDevices from '@/sections/UsedDevices.astro';
+import Contact from '@/sections/Contact.astro';
 ---
 
 <Layout title="FullRenew">
@@ -18,7 +21,10 @@ import ContactUs from '@/sections/ContactUs.astro';
 		<OurMission></OurMission>
 		<CardsInfo></CardsInfo>
 		<AboutUs></AboutUs>
+		<UsedDevices></UsedDevices>
+		<BatteryChange></BatteryChange>
 		<ContactUs></ContactUs>
+		<Contact></Contact>
 		<Footer></Footer>
 	</main>
 </Layout>
