--- a/src/sections/AboutUs.astro
+++ b/src/sections/AboutUs.astro
@@ -1,7 +1,7 @@
 ---
 
 ---
-<section id="aboutUs" class="grid grid-cols-2 items-center justify-items-center gap-4">
+<section id="aboutUs" class="grid grid-cols-2 items-center justify-items-center gap-4 py-12">
     <span class="flex flex-col gap-6">
         <h2 class="text-white text-3xl font-bold">Sobre Nosotros</h2>
         <div class="flex flex-col gap-4 text-neutral-300">
