--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,6 +11,7 @@ import ContactUs from '@/sections/ContactUs.astro';
 import BatteryChange from '@/sections/BatteryChange.astro';
 import UsedDevices from '@/sections/UsedDevices.astro';
 import Contact from '@/sections/Contact.astro';
+import LogoSlider from '@/sections/LogoSlider.astro';
 ---
 
 <Layout title="FullRenew">
@@ -18,12 +19,13 @@ import Contact from '@/sections/Contact.astro';
 		<Header></Header>
 		<Hero></Hero>
 		<Slider></Slider>
+		<!-- <LogoSlider></LogoSlider> -->
 		<OurMission></OurMission>
 		<CardsInfo></CardsInfo>
 		<AboutUs></AboutUs>
 		<UsedDevices></UsedDevices>
-		<BatteryChange></BatteryChange>
 		<ContactUs></ContactUs>
+		<BatteryChange></BatteryChange>
 		<Contact></Contact>
 		<Footer></Footer>
 	</main>
