feat: Doing the page responsive

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -6,9 +6,9 @@ import YouTube from "@/icons/YouTube.astro";
 
 
 ---
-<footer class="mt-12 flex flex-col items-center justify-center gap-12">
-    <div class="flex flex-col items-center justify-center gap-6 w-full">
-        <h4 class="text-white font-semibold font-xl">SUSCRIBETE A NUESTRA NEWSLETTER</h4>
+<footer class="mt-6 md:mt-12 flex flex-col items-center justify-center gap-6 md:gap-12">
+    <div class="flex flex-col items-center justify-center gap-3 md:gap-6 w-full">
+        <h4 class="text-white font-semibold text-base md:text-xl">SUSCRIBETE A NUESTRA NEWSLETTER</h4>
         <p class="text-neutral-300 w-full text-center">Suscríbete a nuestro boletín para recibir noticias, actualizaciones gratuitas de contenido interesante y nuevos productos lanzados</p>
         <form action="">
             <span class="flex flex-row justify-center items-center">
@@ -20,8 +20,8 @@ import YouTube from "@/icons/YouTube.astro";
             </span>
         </form>
     </div>
-    <div class="flex flex-col items-center justify-center gap-6 w-full">
-        <h2 class="text-white text-2xl font-bold">Siguenos en nuestras redes sociales</h2>
+    <div class="flex flex-col items-center justify-center gap-3 md:gap-6 w-full">
+        <h2 class="text-white text-lg md:text-2xl font-bold">Siguenos en nuestras redes sociales</h2>
         <span class="flex flex-row justify-center w-full gap-8">
             <YouTube class="text-neutral-300 size-8 cursor-pointer hover:scale-105 hover:text-white"></YouTube>
             <Instagram class="text-neutral-300 size-8 cursor-pointer hover:scale-105 hover:text-white"></Instagram>
