--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,15 +11,13 @@ import ContactUs from '@/sections/ContactUs.astro';
 import BatteryChange from '@/sections/BatteryChange.astro';
 import UsedDevices from '@/sections/UsedDevices.astro';
 import Contact from '@/sections/Contact.astro';
-import LogoSlider from '@/sections/LogoSlider.astro';
 ---
 
 <Layout title="FullRenew">
-	<main class="flex flex-col gap-16">
+	<main class="size-full flex flex-col gap-8 md:gap-16">
 		<Header></Header>
 		<Hero></Hero>
 		<Slider></Slider>
-		<!-- <LogoSlider></LogoSlider> -->
 		<OurMission></OurMission>
 		<CardsInfo></CardsInfo>
 		<AboutUs></AboutUs>
