--- a/src/sections/BatteryChange.astro
+++ b/src/sections/BatteryChange.astro
@@ -10,11 +10,11 @@ const whatsappMessage = {
 const whatsappHref = `${whatsappMessage.url}${whatsappMessage.phone}?text=${whatsappMessage.text}`
 
 ---
-<section class="relative flex flex-col gap-6 py-12">
-    <h2 class="text-white text-3xl font-bold">¿Necesitas un Cambio de Bateria?</h2>
-    <p class="text-neutral-300">Cambiamos tu bateria sin mensaje</p>
-    <a href={whatsappHref} target="_blank" class="flex flex-row items-center gap-2 bg-neutral-300 text-neutral-900 py-4 px-6 rounded-full w-fit hover:scale-105 hover:bg-white transition-all">
-        <Whatsapp></Whatsapp>
-        <p class="text-sm font-bold">Contactanos</p>
+<section class="relative flex flex-col gap-3 md:gap-6 py-6 md:py-12">
+    <h2 class="text-white text-xl md:text-3xl font-bold">¿Necesitas un Cambio de Bateria?</h2>
+    <p class="text-neutral-300 text-sm md:text-base">Cambiamos tu bateria sin mensaje</p>
+    <a href={whatsappHref} target="_blank" class="group/whatsapp flex flex-row items-center gap-2 bg-neutral-300 text-neutral-900 py-4 px-6 rounded-full w-fit hover:scale-105 hover:bg-whatsapp transition-all">
+        <Whatsapp class="group-hover/whatsapp:text-primary"></Whatsapp>
+        <p class="group-hover/whatsapp:text-primary text-sm font-bold">Contactanos</p>
     </a>
 </section>
