--- a/src/sections/Contact.astro
+++ b/src/sections/Contact.astro
@@ -1,19 +1,19 @@
 ---
 
 ---
-<section class="flex flex-col gap-6 py-12">
-    <div class="grid grid-cols-2 gap-8">
+<section class="flex flex-col gap-3 md:gap-6 py-6 md:py-12">
+    <div class="grid md:grid-cols-2 gap-8">
         <span class="relative grid place-items-center text-white font-bold h-[400px]">
             <img class="w-full h-auto aspect-video rounded-lg grayscale brightness-50" src="./OurMission.webp" alt="">
             <div class="absolute inset-0 flex flex-col justify-center gap-6 px-10 bg-gradient-to-t from-neutral-900 to-transparent">
-                <h2 class="text-white text-3xl font-bold">Unamos fuerzas</h2>
-                <p class="text-neutral-300">Complete el siguiente formulario o visítenos en nuestra oficina en Vélez-Málaga para conversar
+                <h2 class="text-white text-xl md:text-3xl font-bold">Unamos fuerzas</h2>
+                <p class="text-neutral-300 text-sm md:text-base">Complete el siguiente formulario o visítenos en nuestra oficina en Vélez-Málaga para conversar
                     sobre cómo podemos colaborar en su próximo proyecto. Estaremos encantados de explorar oportunidades juntos y brindarle
                     soluciones personalizadas para su negocio.</p>
             </div>
         </span>
         <span class="grid place-items-center text-white text-3xl font-bold">
-            <form action="" class="flex flex-col items-start justify-around w-full h-full">
+            <form action="" class="flex flex-col items-start justify-around w-full h-full gap-4">
                 <span class="flex flex-row gap-4 justify-between w-full">
                     <input type="text" placeholder="Nombre*" class="w-full text-sm p-2 outline-none border border-neutral-300 rounded-lg bg-transparent">
                     <input type="text" placeholder="Empresa" class="text-sm p-2 outline-none border border-neutral-300 rounded-lg bg-transparent">
