--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,11 +1,36 @@
 ---
+import Close from "@/icons/Close.astro";
+import FullRenew from "@/icons/FullRenew.astro";
+import Menu from "@/icons/Menu.astro";
 
 ---
-<header class="flex flex-row justify-between py-8">
-    <h1 class="text-white text-3xl font-bold">FullRenew</h1>
-    <nav class=" text-white/80 flex flex-row gap-4 hover:*:text-white">
+<header class="flex flex-row justify-between py-4 md:py-8">
+    <FullRenew class="w-20 h-auto aspect-square"></FullRenew>
+    <nav class="hidden sm:flex flex-row items-center gap-4 text-white/80 hover:*:text-white hover:*:scale-105 *:transition-all">
         <a href="/">Inicio</a>
         <a href="#aboutUs">Sobre Nosotros</a>
         <a href="#contactUs">Contactanos</a>
     </nav>
+    <button class="block sm:hidden" id="menuButton">
+        <Menu class="w-8 h-auto aspect-square text-white"></Menu>
+    </button>
+    <dialog id="menu" class="inset-0 size-full bg-black/25">
+        <span class="size-full flex flex-col justify-center items-center gap-16 text-neutral-300 text-2xl font-bold hover:*:text-white hover:*:scale-105 *:transition-all">
+            <a href="/">Inicio</a>
+            <a href="#aboutUs">Sobre Nosotros</a>
+            <a href="#contactUs">Contactanos</a>
+            <form method="dialog" class="size-fit">
+                <button><Close class="w-8 h-auto aspect-square cursor-pointer"></Close></button>
+            </form>
+        </span>
+    </dialog>
 </header>
+
+<script>
+    const menuButton = document.getElementById("menuButton") as HTMLButtonElement;
+    const menu = document.getElementById("menu") as HTMLDialogElement;
+
+    menuButton.addEventListener("click", () => {
+        menu.showModal();
+    });
+</script>
