--- a/src/sections/CardsInfo.astro
+++ b/src/sections/CardsInfo.astro
@@ -17,8 +17,10 @@ const info = [
     }
 ]
 ---
-<section class="flex flex-row w-full justify-center py-12">
-    <div class="grid grid-cols-3 w-3/4 gap-12">
+<section class="relative flex flex-row size-full min-h-[400px] justify-center py-6 md:py-12 overflow-auto 
+[&::-webkit-scrollbar-track]:bg-background [&::-webkit-scrollbar-thumb]:bg-secondary
+[&::-webkit-scrollbar-thumb]:rounded-full [&::-webkit-scrollbar]:h-2">
+    <div class="absolute inset-0 md:static grid grid-cols-3 w-[1296px] md:w-3/4 gap-12">
         {
             info.map((item) => {
                 return <Card title={item.title} image={item.image} description={item.description}></Card>
