--- a/src/sections/ContactUs.astro
+++ b/src/sections/ContactUs.astro
@@ -3,27 +3,27 @@ import Email from "@/icons/Email.astro";
 import Phone from "@/icons/Phone.astro";
 import Position from "@/icons/Position.astro";
 ---
-<section id="contactUs" class="flex flex-row w-full justify-center py-12">
-    <span class="grid grid-cols-3 w-5/6 gap-12">
-        <article class="flex flex-col items-center gap-4">
+<section id="contactUs" class="flex flex-row w-full justify-center py-6 md:py-12">
+    <span class="grid md:grid-cols-3 w-5/6 gap-6 md:gap-12">
+        <article class="flex flex-col items-center justify-center gap-2 md:gap-4">
             <Phone class="w-10 h-10 text-white"></Phone>
-            <h3 class="text-white text-xl font-bold">LLAMANOS</h3>
-            <span class="flex flex-col items-center gap-2">
-                <a class="text-neutral-300 font-semibold hover:text-white hover:scale-105 transition-all" href="tel:+34604846040">+34 604 84 60 40 (ventas)</a>
-                <a class="text-neutral-300 font-semibold hover:text-white hover:scale-105 transition-all" href="tel:+34624310814">Teléfono de oficina</a>
+            <h3 class="text-white text-lg md:text-xl font-bold">LLAMANOS</h3>
+            <span class="flex flex-col items-center justify-center gap-2">
+                <a class="text-sm md:text-base text-neutral-300 font-semibold hover:text-white hover:scale-105 transition-all" href="tel:+34604846040">+34 604 84 60 40 (ventas)</a>
+                <a class="text-sm md:text-base text-neutral-300 font-semibold hover:text-white hover:scale-105 transition-all" href="tel:+34624310814">Teléfono de administración</a>
             </span>
         </article>
-        <article class="flex flex-col items-center gap-4">
+        <article class="flex flex-col items-center justify-center gap-2 md:gap-4">
             <Email class="w-10 h-10 text-white"></Email>
-            <h3 class="text-white text-xl font-bold">ESCRIBENOS</h3>
-            <a class="text-neutral-300 font-semibold hover:text-white hover:scale-105 transition-all" href="mailto:ventas@fullrenew.es" >ventas@fullrenew.es</a>
+            <h3 class="text-white text-lg md:text-xl font-bold">ESCRIBENOS</h3>
+            <a class="text-sm md:text-base text-neutral-300 font-semibold hover:text-white hover:scale-105 transition-all" href="mailto:ventas@fullrenew.es" >ventas@fullrenew.es</a>
         </article>
-        <article class="flex flex-col items-center gap-4">
+        <article class="flex flex-col items-center justify-center gap-2 md:gap-4">
             <Position class="w-10 h-10 text-white"></Position>
-            <h3 class="text-white text-xl font-bold">VISITANOS</h3>
-            <span class="flex flex-col items-center gap-2">
-                <a class="text-neutral-300 font-semibold hover:text-white hover:scale-105 transition-all" href="https://maps.app.goo.gl/yoLYvDcmMcHGHw6k6" target="_blank">FullRenew SL, Calle Cristo 4</a>
-                <p class="text-neutral-300">Vélez-Málaga, 29700, España</p>
+            <h3 class="text-white text-lg md:text-xl font-bold">VISITANOS</h3>
+            <span class="flex flex-col items-center justify-center gap-2">
+                <a class="text-sm md:text-base text-neutral-300 font-semibold hover:text-white hover:scale-105 transition-all" href="https://maps.app.goo.gl/yoLYvDcmMcHGHw6k6" target="_blank">FullRenew SL, Calle Cristo 4</a>
+                <p class="text-sm md:text-base text-neutral-300">Vélez-Málaga, 29700, España</p>
             </span>
         </article>
     </span>
