--- a/src/sections/Hero.astro
+++ b/src/sections/Hero.astro
@@ -1,14 +1,14 @@
 ---
 
 ---
-<section class="flex flex-col gap-12">
-    <h1 class="text-6xl font-medium text-white leading-snug">
+<section class="flex flex-col gap-6 md:gap-12">
+    <h1 class="text-2xl md:text-6xl font-medium text-white leading-snug">
         Impulsa tu negocio con iPhones reacondicionados de calidad: stock amplio, entregas rápidas y garantía confiable.
     </h1>
-    <p class="text-neutral-300 text-xl w-1/2">
+    <p class="text-neutral-300 md:text-xl md:w-1/2">
         Descubre la mejor selección de iPhones reacondicionados en España. Conoce nuestro stock, precios y garantías.
     </p>
-    <span>
+    <span class="w-full flex flex-row justify-end md:justify-start">
         <a href="/about" class="bg-white text-neutral-900 font-bold py-4 px-6 rounded-full flex flex-row w-fit hover:scale-105 transition-all">Saber más</a>
     </span>
 </section>
