--- a/src/sections/OurMission.astro
+++ b/src/sections/OurMission.astro
@@ -11,9 +11,9 @@
         <img class="col-span-2 w-2/3 h-auto aspect-video" src="./OurMission.webp" alt="">
     </span>
 </section> -->
-<section class="flex flex-col gap-6 py-12 border-y border-neutral-700">
-    <h2 class="text-white text-3xl font-bold">Nuestra Misión</h2>
-    <p class="text-neutral-300">En Fullrenew SL, nos dedicamos a ofrecer un servicio de máxima calidad, con un enfoque cercano y personalizado.
+<section class="flex flex-col gap-3 md:gap-6 py-6 md:py-12 border-y border-neutral-700">
+    <h2 class="text-white text-xl md:text-3xl font-bold">Nuestra Misión</h2>
+    <p class="text-neutral-300 text-sm md:text-base">En Fullrenew SL, nos dedicamos a ofrecer un servicio de máxima calidad, con un enfoque cercano y personalizado.
         Nuestro compromiso es hacer que la tecnología sea accesible para todos, garantizando dispositivos confiables y reacondicionados.
         Para asegurar la mejor experiencia, testeamos rigurosamente cada uno de nuestros iPhones con el software Nsystool, asegurando su óptimo 
         funcionamiento antes de llegar a manos de nuestros clientes. La satisfacción del cliente es nuestra prioridad en cada paso del proceso.</p>
