--- a/src/sections/UsedDevices.astro
+++ b/src/sections/UsedDevices.astro
@@ -1,9 +1,9 @@
 ---
 
 ---
-<section class="flex flex-col gap-6 py-12 border-y border-neutral-700">
-    <h2 class="text-white text-3xl font-bold">Dispositivos Moviles Usados</h2>
-    <p class="text-neutral-300">En Fullrenew nos especializamos en la venta de iPhones usados de alta calidad. Contamos con un gran stock, desde dispositivos
+<section class="flex flex-col gap-3 md:gap-6 py-6 md:py-12 border-y border-neutral-700">
+    <h2 class="text-white text-xl md:text-3xl font-bold">Dispositivos Moviles Usados</h2>
+    <p class="text-neutral-300 text-sm md:text-base">En Fullrenew nos especializamos en la venta de iPhones usados de alta calidad. Contamos con un gran stock, desde dispositivos
         usados en excelente estado, hasta modelos ASIS y de exposición. Ofrecemos la posibilidad de precompra y garantizamos entregas
         rápidas en 24 horas. Todos nuestros dispositivos son rigurosamente testeados con el software Nsystool, asegurando su funcionalidad
         antes de la venta. Además, ofrecemos una garantía de 30 días para mayor tranquilidad de nuestros clientes.</p>
