--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,7 +10,7 @@ import AboutUs from '@/sections/AboutUs.astro';
 import ContactUs from '@/sections/ContactUs.astro';
 import BatteryChange from '@/sections/BatteryChange.astro';
 import UsedDevices from '@/sections/UsedDevices.astro';
-import Contact from '@/sections/Contact.astro';
+import ContactForm from '@/sections/ContactForm.astro';
 ---
 
 <Layout title="FullRenew">
@@ -24,7 +24,7 @@ import Contact from '@/sections/Contact.astro';
 		<UsedDevices></UsedDevices>
 		<ContactUs></ContactUs>
 		<BatteryChange></BatteryChange>
-		<Contact></Contact>
+		<ContactForm></ContactForm>
 		<Footer></Footer>
 	</main>
 </Layout>
