--- a/src/sections/CardsInfo.astro
+++ b/src/sections/CardsInfo.astro
@@ -4,16 +4,16 @@ import Card from "@/components/Card.astro";
 const info = [
     {
         title: "Cambio de bateria",
-        image: "./OurMission.webp",
-        description: "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer dolor elit, ultrices in purus quis, dignissim facilisis nunc. Maecenas vitae turpis magna. Nullam euismod est nisl. Vestibulum quis ipsum vel mauris placerat lobortis."
+        image: "./cambio-bateria-iphone.webp",
+        description: "Ofrecemos un servicio rápido y confiable para que tu dispositivo recupere su rendimiento original. Utilizamos baterías de alta calidad, adaptadas a cada modelo, y nuestros técnicos aseguran una instalación segura y profesional."
     },{
         title: "Reacondicionamiento",
-        image: "./OurMission.webp",
-        description: "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer dolor elit, ultrices in purus quis, dignissim facilisis nunc. Maecenas vitae turpis magna. Nullam euismod est nisl."
+        image: "./cambio-pantalla-iphone.webp",
+        description: "Dale una nueva vida a tu dispositivo para que luzca y funcione como nuevo. Realizamos una revisión completa, optimizando el rendimiento y asegurando que cada aspecto del dispositivo esté en perfectas condiciones garantizando un reacondicionamiento de alta calidad"
     },{
         title: "Limpieza a fondo",
-        image: "./OurMission.webp",
-        description: "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer dolor elit, ultrices in purus quis, dignissim facilisis nunc. Maecenas vitae turpis magna. Nullam euismod est nisl. Vestibulum quis ipsum vel mauris placerat lobortis."
+        image: "./limpieza-iphone.webp",
+        description: "Manten tu dispositivo libre de polvo, suciedad y acumulación de partículas que pueden afectar su rendimiento.  Una limpieza a fondo no solo mejora el aspecto de tu teléfono, sino que también previene problemas como sobrecalentamiento y mejora el rendimiento de sonido y carga."
     }
 ]
 ---
