--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -4,9 +4,9 @@ import FullRenew from "@/icons/FullRenew.astro";
 import Menu from "@/icons/Menu.astro";
 
 ---
-<header class="flex flex-row justify-between py-4 md:py-8">
-    <FullRenew class="w-20 h-auto aspect-square"></FullRenew>
-    <nav class="hidden sm:flex flex-row items-center gap-4 text-white/80 hover:*:text-white hover:*:scale-105 *:transition-all">
+<header class="flex flex-row justify-between items-end py-4 md:py-8">
+    <img src="./fullrenew-logo.webp" alt="" class="w-40 h-auto">
+    <nav class="hidden sm:flex flex-row items-center gap-4 text-secondary font-bold *:transition-all hover:*:text-primary hover:*:scale-105">
         <a href="/">Inicio</a>
         <a href="#aboutUs">Sobre Nosotros</a>
         <a href="#contactUs">Contactanos</a>
@@ -14,11 +14,11 @@ import Menu from "@/icons/Menu.astro";
     <button class="block sm:hidden" id="menuButton">
         <Menu class="w-8 h-auto aspect-square text-white"></Menu>
     </button>
-    <dialog id="menu" class="inset-0 size-full bg-black/75">
-        <span class="size-full flex flex-col justify-center items-center gap-16 text-neutral-300 text-2xl font-bold hover:*:text-white hover:*:scale-105 *:transition-all">
-            <a href="/">Inicio</a>
-            <a href="#aboutUs">Sobre Nosotros</a>
-            <a href="#contactUs">Contactanos</a>
+    <dialog id="menu" class="inset-0 size-full bg-transparent backdrop-blur backdrop:bg-neutral-900/75 backdrop:backdrop-blur">
+        <span class="size-full flex flex-col justify-center items-center gap-16 text-secondary text-2xl font-bold hover:*:text-primary hover:*:scale-105 *:transition-all">
+            <a id="menuHome" href="/">Inicio</a>
+            <a id="menuAbout" href="#aboutUs">Sobre Nosotros</a>
+            <a id="menuContact" href="#contactUs">Contactanos</a>
             <form method="dialog" class="size-fit">
                 <button><Close class="w-8 h-auto aspect-square cursor-pointer"></Close></button>
             </form>
@@ -29,8 +29,23 @@ import Menu from "@/icons/Menu.astro";
 <script>
     const menuButton = document.getElementById("menuButton") as HTMLButtonElement;
     const menu = document.getElementById("menu") as HTMLDialogElement;
+    const menuHome = document.getElementById("menuHome") as HTMLAnchorElement;
+    const menuAbout = document.getElementById("menuAbout") as HTMLAnchorElement;
+    const menuContact = document.getElementById("menuContact") as HTMLAnchorElement;
 
     menuButton.addEventListener("click", () => {
         menu.showModal();
+    });
+
+    menuHome.addEventListener("click", () => {
+        menu.close();
+    });
+
+    menuAbout.addEventListener("click", () => {
+        menu.close();
+    });
+
+    menuContact.addEventListener("click", () => {
+        menu.close();
     });
 </script>
