--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,6 +1,5 @@
 ---
 import Close from "@/icons/Close.astro";
-import FullRenew from "@/icons/FullRenew.astro";
 import Menu from "@/icons/Menu.astro";
 
 ---
@@ -16,6 +15,7 @@ import Menu from "@/icons/Menu.astro";
     </button>
     <dialog id="menu" class="inset-0 size-full bg-transparent backdrop-blur backdrop:bg-neutral-900/75 backdrop:backdrop-blur">
         <span class="size-full flex flex-col justify-center items-center gap-16 text-secondary text-2xl font-bold hover:*:text-primary hover:*:scale-105 *:transition-all">
+            <!-- TODO: Disable autofocus on mobile menu -->
             <a id="menuHome" href="/">Inicio</a>
             <a id="menuAbout" href="#aboutUs">Sobre Nosotros</a>
             <a id="menuContact" href="#contactUs">Contactanos</a>
