--- a/src/sections/Slider.astro
+++ b/src/sections/Slider.astro
@@ -1,25 +1,31 @@
 ---
-import LogoFullRenew from "@/icons/LogoFullRenew.astro";
-import LogoNSYSTool from "@/icons/LogoNSYSTool.astro";
+type LogoData = {
+  src: string;
+  alt: string;
+};
 
-
+const logos: LogoData[] = [
+  { src: "/fullrenew-logo.webp", alt: "Logo fullRenew" },
+  { src: "/nsysgroup-logo.webp", alt: "Logo NSYSGroup" },
+  { src: "/fullrenew-logo.webp", alt: "Logo fullRenew" },
+  { src: "/nsysgroup-logo.webp", alt: "Logo NSYSGroup" },
+  { src: "/fullrenew-logo.webp", alt: "Logo fullRenew" },
+  { src: "/nsysgroup-logo.webp", alt: "Logo NSYSGroup" },
+  { src: "/fullrenew-logo.webp", alt: "Logo fullRenew" },
+  { src: "/nsysgroup-logo.webp", alt: "Logo NSYSGroup" },
+  { src: "/fullrenew-logo.webp", alt: "Logo fullRenew" },
+  { src: "/nsysgroup-logo.webp", alt: "Logo NSYSGroup" },
+];
 ---
 <!-- Edit this section to get every logo element and do the animation from them. When the logo item goes to X -20% move the logo item to X 120% -->
 <section class="relative flex-row gap-4 md:gap-8 overflow-hidden whitespace-nowrap w-full py-6 md:py-12 text-secondary after:absolute after:top-0 after:w-52 after:h-full after:z-10 
     after:left-0 after:bg-gradient-to-l after:from-transparent after:to-neutral-900 before:absolute before:top-0 before:w-52 before:h-full before:z-10 
     before:right-0 before:bg-gradient-to-r before:from-transparent before:to-neutral-900">
-    <span class="absolute w-auto flex flex-row gap-8">
-        <LogoFullRenew class="animate-logo_slide w-[125px]"></LogoFullRenew>
-        <LogoNSYSTool class="animate-logo_slide w-[125px]"></LogoNSYSTool>
-        <LogoFullRenew class="animate-logo_slide w-[125px]"></LogoFullRenew>
-        <LogoNSYSTool class="animate-logo_slide w-[125px]"></LogoNSYSTool>
-        <LogoFullRenew class="animate-logo_slide w-[125px]"></LogoFullRenew>
-        <LogoNSYSTool class="animate-logo_slide w-[125px]"></LogoNSYSTool>
-        <LogoFullRenew class="animate-logo_slide w-[125px]"></LogoFullRenew>
-        <LogoNSYSTool class="animate-logo_slide w-[125px]"></LogoNSYSTool>
-        <LogoFullRenew class="animate-logo_slide w-[125px]"></LogoFullRenew>
-        <LogoNSYSTool class="animate-logo_slide w-[125px]"></LogoNSYSTool>
-        <LogoFullRenew class="animate-logo_slide w-[125px]"></LogoFullRenew>
-        <LogoNSYSTool class="animate-logo_slide w-[125px]"></LogoNSYSTool>
+    <span class="absolute w-auto top-0 left-0 flex flex-row justify-center items-end gap-8">
+        {
+            logos.map((logo, index) => (
+                <img src={logo.src} alt={logo.alt} class="animate-logo_slide w-40 h-auto" />
+            ))
+        }
     </span>
 </section>
