fix: Edit OurMission component and change distribution of the page

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,13 +18,13 @@ import ContactForm from '@/sections/ContactForm.astro';
 		<Header></Header>
 		<Hero></Hero>
 		<Slider></Slider>
-		<OurMission></OurMission>
-		<CardsInfo></CardsInfo>
+		<!-- <CardsInfo></CardsInfo> -->
 		<AboutUs></AboutUs>
 		<UsedDevices></UsedDevices>
 		<ContactUs></ContactUs>
 		<BatteryChange></BatteryChange>
 		<ContactForm></ContactForm>
+		<OurMission></OurMission>
 		<Footer></Footer>
 	</main>
 </Layout>
