--- a/src/sections/OurMission.astro
+++ b/src/sections/OurMission.astro
@@ -12,7 +12,7 @@
     </span>
 </section> -->
 <section class="relative">
-    <span class="flex flex-col gap-3 md:gap-6 py-6 md:py-12 bg-gradient-to-t from-background via-transparent to-background">
+    <span class="flex flex-col gap-3 md:gap-6 py-6 md:py-12 bg-gradient-to-t from-background via-transparent to-background px-3 md:px-0">
         <h2 class="text-white text-xl md:text-3xl font-bold">Nuestra Misión</h2>
         <p class="text-neutral-300 text-sm md:text-base">En Fullrenew SL, nos dedicamos a ofrecer un servicio de máxima calidad, con un enfoque cercano y personalizado.
             Nuestro compromiso es hacer que la tecnología sea accesible para todos, garantizando dispositivos confiables y reacondicionados.
