fix: Show batery video on mobile

--- a/src/sections/OurMission.astro
+++ b/src/sections/OurMission.astro
@@ -19,5 +19,5 @@
             Para asegurar la mejor experiencia, testeamos rigurosamente cada uno de nuestros iPhones con el software Nsystool, asegurando su óptimo 
             funcionamiento antes de llegar a manos de nuestros clientes. La satisfacción del cliente es nuestra prioridad en cada paso del proceso.</p>
     </span>
-    <img src="/our-mission-banner.webp" alt="" class="absolute inset-0 size-full object-cover grayscale brightness-50 -z-10">
+    <img src="/our-mission-banner.webp" alt="" class="absolute inset-0 size-full object-cover object-center grayscale brightness-50 -z-10">
 </section>
