--- a/src/sections/BatteryChange.astro
+++ b/src/sections/BatteryChange.astro
@@ -23,7 +23,7 @@ const whatsappHref = `${whatsappMessage.url}${whatsappMessage.phone}?text=${what
         </a>
     </div>
 </section> -->
-<section class="grid lg:grid-cols-3 py-6 md:py-12 gap-3 justify-items-center">
+<section class="grid md:grid-cols-3 py-6 md:py-12 gap-6 justify-items-center">
     <span class="col-span-2 flex flex-col gap-3 md:gap-6 md:sticky top-10">
         <h2 class="text-white text-xl md:text-3xl font-bold">Compra stock con 100% de bateria</h2>
         <div class="flex flex-col col-span-2 gap-3">
@@ -35,5 +35,5 @@ const whatsappHref = `${whatsappMessage.url}${whatsappMessage.phone}?text=${what
             <p class="group-hover/whatsapp:text-primary text-sm font-bold">Contactanos</p>
         </a>
     </span>
-    <video class="hidden lg:block h-auto w-2/3 row-span-2 rounded-md" src="./microsoldadura.mp4" autoplay muted loop></video>
+    <video class="h-auto w-2/3 col-span-2 md:row-span-2 md:col-span-1 rounded-md min-w-56 max-w-80" src="./microsoldadura.mp4" autoplay muted loop></video>
 </section>
