fix: Editing about us images for mobile

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,7 +5,7 @@ import Hero from '@/sections/Hero.astro';
 import Slider from '@/sections/Slider.astro';
 import OurMission from '@/sections/OurMission.astro';
 import Footer from '@/components/Footer.astro';
-import CardsInfo from '@/sections/CardsInfo.astro';
+// import CardsInfo from '@/sections/CardsInfo.astro';
 import AboutUs from '@/sections/AboutUs.astro';
 import ContactUs from '@/sections/ContactUs.astro';
 import BatteryChange from '@/sections/BatteryChange.astro';
