--- a/src/sections/AboutUs.astro
+++ b/src/sections/AboutUs.astro
@@ -1,5 +1,17 @@
 ---
+import Left from "@/icons/Left.astro";
+import Right from "@/icons/Right.astro";
 
+type ImgData = {
+  src: string;
+  alt: string;
+};
+
+const images: ImgData[] = [
+  { src: "/OurMission.webp", alt: "Our Mission" },
+  { src: "/OurMission.webp", alt: "Our Mission" },
+  { src: "/OurMission.webp", alt: "Our Mission" },
+];
 ---
 <section id="aboutUs" class="grid md:grid-cols-2 justify-items-center gap-2 md:gap-4 py-6 md:py-12 relative min-h-min overflow-visible">
     <span class="flex flex-col gap-3 md:gap-6 md:sticky top-10 overflow-hidden h-fit">
@@ -30,11 +42,48 @@
             </span>
         </div>
     </span>
-    <span class="flex flex-row md:flex-col gap-6 relative overflow-x-scroll pb-4
-    [&::-webkit-scrollbar-track]:bg-background [&::-webkit-scrollbar-thumb]:bg-secondary
-    [&::-webkit-scrollbar-thumb]:rounded-full [&::-webkit-scrollbar]:h-2">
-        <img class="h-auto w-full aspect-video rounded-lg" src="./OurMission.webp" alt="">
-        <img class="h-auto w-full aspect-video rounded-lg" src="./OurMission.webp" alt="">
-        <img class="h-auto w-full aspect-video rounded-lg" src="./OurMission.webp" alt="">
-    </span>
+    <div class="flex flex-col gap-2">
+        <span id="gallery" class="relative size-full flex flex-row md:flex-col md:gap-6 overflow-hidden">
+            {
+                images.map((image) => (
+                    <img class="h-auto w-full aspect-video rounded-lg" src={image.src} alt={image.alt} />
+                ))
+            }
+        </span>
+        <span class="flex md:hidden text-white w-full flex-row justify-between items-center px-5">
+            <button id="btnLeft">
+                <Left class="text-secondary size-6 hover:text-primary hover:scale-105"></Left>
+            </button>
+            <button id="btnRight">
+                <Right class="text-secondary size-6 hover:text-primary hover:scale-105"></Right>
+            </button>
+        </span>
+    </div>
 </section>
+
+<script>
+    const gallery = document.getElementById('gallery') as HTMLSpanElement;
+    const btnLeft = document.getElementById('btnLeft') as HTMLButtonElement;
+    const btnRight = document.getElementById('btnRight') as HTMLButtonElement;
+    let imgWidth = 0;
+
+    setTimeout(() => {
+        imgWidth = gallery.clientWidth;
+    }, 1000)
+
+    btnLeft.addEventListener('click', () => {
+        if (gallery.scrollLeft <= 0){
+            gallery.scrollLeft = gallery.scrollWidth - gallery.clientWidth;
+        }else{
+            gallery.scrollLeft -= imgWidth;
+        }
+    })
+
+    btnRight.addEventListener('click', () => {
+        if(gallery.scrollLeft >= gallery.scrollWidth - gallery.clientWidth){
+            gallery.scrollLeft = 0;
+        }else{
+            gallery.scrollLeft += imgWidth;
+        }
+    })
+</script>
