fix: Editing about us images

--- a/src/sections/AboutUs.astro
+++ b/src/sections/AboutUs.astro
@@ -8,9 +8,9 @@ type ImgData = {
 };
 
 const images: ImgData[] = [
-  { src: "/OurMission.webp", alt: "Our Mission" },
-  { src: "/OurMission.webp", alt: "Our Mission" },
-  { src: "/OurMission.webp", alt: "Our Mission" },
+  { src: "/about-us-1.webp", alt: "Our Mission" },
+  { src: "/about-us-2.webp", alt: "Our Mission" },
+  { src: "/about-us-3.webp", alt: "Our Mission" },
 ];
 ---
 <section id="aboutUs" class="grid md:grid-cols-2 justify-items-center gap-2 md:gap-4 py-6 md:py-12 relative min-h-min overflow-visible">
